Bug 1127498 - Share one buffer between all threads, improve marker lifetime management, some code cleanup. r=BenWa